<resources>
    <string name="app_name">Aquarium Checker</string>
    <string name="descripcion_mis_acuarios">%1$s (%2$s Litros)</string>
    <string-array name="tipoAgua">
        <item>Dulce</item>
        <item>Salada</item>
    </string-array>
    <string name="title_activity_mis_acuarios">Mis Acuarios</string>
    <string name="title_activity_mis_peces">Mis Peces</string>
    <string name="title_activity_agregar_plantas_peces">Agregar Plantas y Peces</string>
    <string name="cantidad_peces_plantas">Cantidad: %1$d</string>
    <string name="tituloMisAcuarios">Mis Acuarios</string>
    <string name="btnNuevoAcuario">Nuevo Acuario</string>
    <string name="btnMisAcuarios">Acuarios</string>
    <string name="btnGaleria">Galeria</string>
    <string name="btnPlantas">Plantas</string>
    <string name="btnPeces">Peces</string>
    <string name="btnRecordatorio">Recordatorios</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnAyuda">Ayuda</string>
    <string name="btnEditarAcuario"> Editar Acuario</string>
    <string name="tituloNuevo">Nuevo Acuario</string>
    <string name="tituloEditar">Editar Acuario</string>
    <string name="tituloGaleria">Galeria</string>
    <string name="nombreAcuario">Nombre:</string>
    <string name="TipoAgua">Tipo de Agua:</string>
    <string name="Forma">Forma:</string>
    <string name="Medidas">Medidas:</string>
    <string name="Volumen">Volumen:</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="nombreAcuarioEdit">Nombre</string>
    <string name="TipoAguaEdit">Tipo de Agua</string>
    <string name="FormaEdit">Forma</string>
    <string name="MedidasEdit">Medidas</string>
    <string name="VolumenEdit">Volumen</string>
    <string name="btn_GuardarEdit">Guardar</string>
    <string name="btn_CancelarEdit">Cancelar</string>
    <string name="agregar_acuarios_descripcion">Seleccione un acuario o en el icono + para agregar uno nuevo</string>
    <string name="agregar_recordatorio_descripcion">Seleccione un recordatorio para editarlo o en el icono + para agregar uno nuevo</string>
    <string name="agregar_historial_descripcion">Seleccione un historial para editarlo o en el icono + para agregar uno nuevo</string>
    <string name="tituloAcuarioGaleria">Acuario</string>
    <string name="nombreAcuarioGaleria">Nombre</string>
    <string name="fechaGaleria">Fecha</string>
    <string name="observacionesAcuario">Observaciones</string>
    <string name="fotos">Fotos</string>
    <string name="tituloRecordatorio">Recordatorios</string>
    <string name="tituloRecordatorios">Seleciona tu acuario</string>
    <string name="tituloCalendario">Calendario</string>
    <string name="tituloHora">Hora</string>
    <string name="tituloTipo1">Tipo</string>
    <string name="tituloHistorial">Historial</string>
    <string name="tituloAcuario">Acuario</string>
    <string name="tituloTipoAcuario">Tipo Acuario</string>
    <string name="btnParametros">Parametros</string>
    <string name="btnNoCiclado">No Ciclado</string>
    <string name="tituloparametros">Parametros del acuario</string>
    <string name="tituloParametrosAnteriores">Anteriores</string>
    <string name="tituloParametrosActual">Actual</string>
    <string name="tituloParametrosPh">Ph</string>
    <string name="tituloParametrosGh">Gh</string>
    <string name="tituloParametrosKh">Kh</string>
    <string name="tituloParametrosCo2">Co2</string>
    <string name="tituloParametrosIluminacion">Iluminación</string>
    <string name="tituloParametrosObservaciones">Observaciones</string>
    <string name="tituloParametrosFecha1">Seleccione la fecha</string>
    <string name="tituloParametrosRecomendaciones">Recomendaciones</string>
    <string name="action_settings">Settings</string>
    <string name="agregar_peces_descripcion">Seleccione el acuario para agregar peces</string>
    <string name="title_activity_nuevo_acuario">Nuevo Acuario</string>
    <string name="title_activity_galeria">Galeria</string>
    <string name="title_activity_fotos">Fotos</string>
    <string name="title_activity_plantas">Plantas</string>
    <string name="siguiente_icono">Siguiente</string>
    <string name="title_activity_editar_acuario">Editar Acuario</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_historial_ciclado">Historial Ciclado</string>
    <string name="title_activity_recordatorios">Recordatorios</string>
    <string name="hint_nombre">Nombre</string>
    <string name="alto">Alto</string>
    <string name="ancho">Ancho</string>
    <string name="profundidad">Profundidad</string>
    <string name="diametro">Diametro</string>
    <string name="medida_ejemplo">10 cm</string>
    <string name="positivo">Aceptar</string>
    <string name="negativo">Cancelar</string>
    <string name="title_activity_list_recordatorios">Recordatorios</string>
    <string name="title_activity_list_historial">Historial</string>
    <string name="btncalendario">Ver calendario</string>
    <string name="btnhora">Ver hora</string>
    <string name="title_activity_mis_plantas_acuario">Mis Plantas</string>
    <string name="title_activity_nueva_galeria">Nueva Galeria</string>
    <string name="observaciones_galeria">Observaciones</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="guardar_galeria">Guardar</string>
    <string name="title_activity_nuevo_pez">Nuevo Pez</string>
    <string name="foto">Tomar Foto</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="ayuda">Aquarium Checker es una aplicación para mantener tus acuarios al día.\n
La pantalla principal te muestra los menus disponibles.
Al hacer clic en uno de ellos se abrirá una pantalla para escojer un acuario.
Si no tienes ningun acuario podras crear uno desde esa misma pantalla.\n
Una vez escogido el acuario se te abrira una pantalla dependiendo el Menu.\n
Podras crear acuarios, tomar una galeria de fotos de tu acuario, agregar peces y plantas, configurar recordatorios e historiales</string>
    <string name="texto_ayuda_galeria">Selecciones una galeria para ver su contenido o en el icono + para agregar una nueva</string>
    <string name="ayuda_peces">Puede eliminar un item o crear uno nuevo</string>
    <string name="title_activity_historiales">Historiales</string>
    <string name="title_activity_nuevo_planta">Nuevo Planta</string>
    <string name="ayuda_historiales">Seleccionea un historial para editarlo</string>
    <string name="title_activity_rcordatorios_lista_acuaruios">Recordatorios</string>
    <string name="title_activity_navegacion">Aquarium Checker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_acuario_detail">AcuarioDetail</string>
</resources>