<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.AquariumCherckerMain"
    tools:showIn="@layout/main_activity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Resumen"
        android:text="@string/btnMisAcuarios"
        android:onClick="abrirMisAcuarios"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Galeria"
        android:text="@string/btnGaleria"
        android:onClick="abrirGaleria"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_peces"
        android:text="@string/btnPeces"
        android:onClick="abrirPeces"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_plantas"
        android:text="@string/btnPlantas"
        android:onClick="abrirPlantas"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_recordatorio"
        android:text="@string/btnRecordatorio"
        android:onClick="abrirRecordatorio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_historial"
        android:text="@string/btnHistorial"
        android:onClick="abrirHistorial"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ayuda"
        android:text="@string/btnAyuda"
        android:onClick="abrirAyuda"/>

</LinearLayout>
