<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloParametrosFecha1"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnCalendario"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btncalendario" />

    <TextView
        android:id="@+id/txtFechaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha"
        android:textSize="18sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Parametros"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/tituloParametrosPh"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/tituloParametrosGh"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/txtghact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/tituloParametrosKh"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtkh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_column="0"
                android:layout_gravity="left"
                android:text="@string/tituloParametrosCo2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="10"
                android:layout_gravity="left"
                android:text="@string/tituloParametrosIluminacion"
                android:textAppearance="?android:attr/textAppearanceSmall" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/cmbCo2"
                android:layout_column="0" />

            <Spinner
                android:id="@+id/cmbIluminacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="10" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloParametrosObservaciones"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtobservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="guardarHistorial"
            android:text="@string/btn_Guardar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="cancelar"
            android:text="@string/btn_Cancelar" />

    </FrameLayout>

</LinearLayout>