<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.Galeria"
    tools:showIn="@layout/galeria_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_horizontal"
        android:text="@string/tituloAcuarioGaleria"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreAcuarioGaleria"/>

        <Spinner
            android:id="@+id/cmbAcuarioGaleria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaGaleria"/>

        <Spinner
            android:id="@+id/cmbfechaGaleria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacionesAcuario"/>

        <EditText
            android:id="@+id/txtObservacion"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/btnFotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="abrir_Fotos"
            android:text="@string/fotos"
            android:layout_weight="0.10" />

    </LinearLayout>

</LinearLayout>
